--- a/app/assets/stylesheets/charactor.css
+++ b/app/assets/stylesheets/charactor.css
@@ -15,7 +15,7 @@
 }
 
 .inner{
-  background-color: rgb(115 88 7 / 53%);
+  background-color: rgba(170, 170, 170,0.6);
   min-height: 100vh;
   padding: 10px;
   color: white;
