--- a/app/views/charactors/show.html.erb
+++ b/app/views/charactors/show.html.erb
@@ -3,10 +3,30 @@
 
     <h1 class="name"><%= @charactor.name %> LV. <%= @charactor.level %></h1>
     <ul class="row">
-      <li class="col-6">運動力: LV. <%= @charactor.motion_level %></li>
-      <li class="col-6">知識力: LV. <%= @charactor.knowledge_level %></li>
-      <li class="col-6">健康力: LV. <%= @charactor.health_level %></li>
-      <li class="col-6">発信力: LV. <%= @charactor.communication_level %></li>
+      <li class="col-12">運動力: LV. <%= @charactor.motion_level %> (<%= @charactor.motion_exp %>/100)</li>
+      <li class="col-12">
+        <div class="progress">
+          <div class="progress-bar" role="progressbar"  style="width: <%= @charactor.motion_exp %>%" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100"></div>
+        </div>
+      </li>
+      <li class="col-12 mt-2">知識力: LV. <%= @charactor.knowledge_level %> (<%= @charactor.knowledge_exp %>/100)</li>
+      <li class="col-12">
+        <div class="progress">
+          <div class="progress-bar" role="progressbar"  style="width: <%= @charactor.knowledge_exp %>%" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100"></div>
+        </div>
+      </li>
+      <li class="col-12 mt-2">健康力: LV. <%= @charactor.health_level %> (<%= @charactor.health_exp %>/100)</li>
+      <li class="col-12">
+        <div class="progress">
+          <div class="progress-bar" role="progressbar"  style="width: <%= @charactor.health_exp %>%" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100"></div>
+        </div>
+      </li>
+      <li class="col-12 mt-2">発信力: LV. <%= @charactor.communication_level %> (<%= @charactor.communication_exp %>/100)</li>
+      <li class="col-12">
+        <div class="progress">
+          <div class="progress-bar" role="progressbar"  style="width: <%= @charactor.communication_exp %>%" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100"></div>
+        </div>
+      </li>
     </ul>
     <span class="title">所持スキル</span>
     <div class="skills">
@@ -26,6 +46,9 @@
             [<%= ex.category.name %>]<%= ex.name %>
           </p>
           <p class="mb-2"><%= ex.explanation %></p>
+          <p class="mb-2">
+            報酬： 1<%= ex.unit %>で<%= ex.unit_exp %>経験値を獲得
+          </p>
         </div>
       <% end %>
     </div>
