--- a/app/views/experience_logs/_level.html.erb
+++ b/app/views/experience_logs/_level.html.erb
@@ -1,7 +1,8 @@
-<div class="card" style="max-width: 700px; margin: 50px auto">
-  <div class="card-header">
+<div class="box18" style="max-width: 700px; margin: 20px auto">
+  <div class="">
     <%= message.name %>がレベルアップしました!
   </div>
+  <hr>
   <div class="card-body">
     <p>経験値<%= message.exp %>を取得しました</p>
     <p class="">次のレベルまであと <%= 100 - message.next_exp %></p>
