--- a/app/views/charactors/index.html.erb
+++ b/app/views/charactors/index.html.erb
@@ -13,7 +13,7 @@
           </ul>
         <img src="/img/sep.png" width="100%">
         <div class="skills">
-          <% chara.charactor_skills.each do |cs| %>
+          <% chara.charactor_skills.eager_load(:skill).each do |cs| %>
             <span>[<%= cs.skill.name %> LV. <%= cs.level %>]<span>
           <% end %>
         </div>
