--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -22,6 +22,11 @@
               <%= link_to "vr", vrs_path, class: "nav-link"%>
             <% end %>
           </span>
+          <span class="navbar-text">
+            <% if user_signed_in? %>
+              <%= link_to "チケット管理", tickets_path, class: "nav-link"%>
+            <% end %>
+          </span>
         </div>
       </nav>
     </header>
