--- a/app/views/layouts/htmladmin/_header.html.erb
+++ b/app/views/layouts/htmladmin/_header.html.erb
@@ -9,7 +9,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <%= link_to "Xnotepad", "/", class: "navbar-brand" %>
+          <%= link_to "Xnotepad", "/htmladmin", class: "navbar-brand" %>
         </div>
         <div class="collapse navbar-collapse" id="navbar-mail">
           <ul class="nav navbar-nav">
@@ -22,8 +22,7 @@
               <a href="/#how_to_use_neighborhood">使い方</a>
             </li>
             <li>
-              <%= link_to 'マイページ', htmladmin_user_path(current_user) if current_user %>
-              <%= link_to 'ユーザー登録', new_user_path unless current_user %>
+              <%= link_to 'マイページ', htmladmin_root_path(current_user) if current_user %>
             </li>
             <% if current_user %>
               <li class="dropdown">
@@ -31,9 +30,6 @@
                   設定
                   <b class="caret"></b>
                 </a>
-                <ul class="dropdown-menu" role="menu">
-                  <li><%= link_to 'ユーザ情報更新', edit_htmladmin_user_path(current_user.id) %></li>
-                </ul>
               </li>
             <% else %>
               <li>
