--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -19,12 +19,12 @@
           </span>
           <span class="navbar-text">
             <% if user_signed_in? %>
-              <%= link_to "vr", vrs_path, class: "nav-link"%>
+              <%= link_to "チケット管理", tickets_path, class: "nav-link"%>
             <% end %>
           </span>
           <span class="navbar-text">
             <% if user_signed_in? %>
-              <%= link_to "チケット管理", tickets_path, class: "nav-link"%>
+              <%= link_to "クエスト管理", experiences_path, class: "nav-link"%>
             <% end %>
           </span>
         </div>
