--- a/app/views/tickets/index.html.erb
+++ b/app/views/tickets/index.html.erb
@@ -1,19 +1,19 @@
-
-
-<div class="container">
-  <button data-toggle="modal" data-target="#logModal" class="btn btn-info mb-2">チケット作成</button>
+<div class="container pt-3">
   <% @tickets.each do |t| %>
   <div class="card mb-2" style="background-color: <%= t.color %>; color: white">
     <div class="card-body row">
       <div class="col-8">
         <%= t.title %>
       </div>
-      <div class="col-4" style="background-color: gray">
-        <%= link_to "削除", ticket_path(t), method: "delete", style: "color: white"%>
+      <div class="col-4">
+        <%= link_to "削除", ticket_path(t), method: "delete", class: "btn btn-danger" %>
       </div>
     </div>
   </div>
   <% end %>
+  <div class="card mb-2 p-3">
+    <button data-toggle="modal" data-target="#logModal" class="btn btn-info mb-2">チケット作成</button>
+  </div>
 </div>
 
 <div class="modal fade" id="logModal" tabindex="-1" aria-labelledby="exampleModalLabel1" aria-hidden="true">
