--- a/app/views/experiences/edit.html.erb
+++ b/app/views/experiences/edit.html.erb
@@ -11,7 +11,7 @@
           <%= f.text_field :name, class: "form-control" %>
         </div>
         <div class="field form-group">
-          <label>単位</label><br />
+          <label>カテゴリー</label><br />
           <%= f.select :category_id,Category.all.map{|v| [v.name, v.id]}, {},{class: "form-control"} %>
         </div>
         <div class="field form-group">
@@ -30,7 +30,8 @@
         </div>
 
         <div class="field form-group">
-          <input type="submit" value="作成" class="btn btn-primary">
+          <input type="submit" value="編集" class="btn btn-primary">
+          <%= link_to "削除", experience_path(@experience.id), method: :delete, data: {confirm: "削除しますか？"}, class: "btn btn-danger" %>
         </div>
       <% end %>
     </div>
