--- a/app/views/experiences/new.html.erb
+++ b/app/views/experiences/new.html.erb
@@ -5,7 +5,7 @@
     </div>
     <div class="card-body">
       <%= form_with model: @experience, local: true do |f| %>
-        <%= hidden_field_tag :charactor_id, @experience.charactor_id %>
+        <%= f.hidden_field :charactor_id, value: @experience.charactor_id %>
         <div class="field form-group">
           <label>名前</label><br />
           <%= f.text_field :name, class: "form-control" %>
